--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
+    "@cloudinary/url-gen": "^1.21.0",
     "classnames": "^2.5.1",
     "next": "13.5.6",
+    "next-cloudinary": "^6.13.0",
     "react": "^18",
     "react-dom": "^18"
   },
